--- a/Formula1/Formula1.csproj
+++ b/Formula1/Formula1.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Contracts\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
